--- a/VRChat/28/1121528.html
+++ b/VRChat/28/1121528.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "syK5lNbEODY9a4LdLqgTtzdqUECg7S59Fz+tOTFzPFk="></script>
+    "NmmMRcl4NSPgjIi9ioSV/wwpfGbCAdD/ygtLzqavJuM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ポッキーソード","description":"ねこまモチーフのかっこいい武器を作ろうとしたらできました。疲れた体にお菓子おいしいです！\n\nこんなポッキーが欲しい…☆\n\n△606\n\n\n〇内容物\n\n　　Pokky_box.fbx\n　　pokkybox.png\n　　pokky.png\n\n\n利用規約\n\n〇本モデルの著作権はatmarkに帰属します。\n\n〇再配布、販売は禁止です。\n\n〇改変可\n　\n〇本モデルを使用することによって生じたいかなるトラブルや損害についてatmarkは責任を負わないものとします。\n\n\n質問等はTwitter【@atmark41】までお願いします。","url":"https://booth.pm/ja/items/1121528","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b5c5b880-b11f-4114-807f-4a3e0e9de138/i/1121528/7ba48706-8a65-4a92-8a7d-c4fee98c1e51_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="syK5lNbEODY9a4LdLqgTtzdqUECg7S59Fz+tOTFzPFk="></script>
+    nonce="NmmMRcl4NSPgjIi9ioSV/wwpfGbCAdD/ygtLzqavJuM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -445,9 +445,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
