--- a/VRChat/16/1127716.html
+++ b/VRChat/16/1127716.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "oH/+1zg5ijo2SbnyLGdDu2xcIp2CLxLZV2zGvKnLxoY="></script>
+    "7U5G9qof1/Sf8ddZCIjGeWFHerqW+KQvqoMh6R8znf8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】面取りキューブ BeveledCube【UnityPackage】","description":"VRCのワールド制作を想定した面取りしたキューブのUnityPackageです。Unityは触れるけどモデリングはちょっと...という方向けです。\n\n△150～386\n\n通常、Unityでワールド制作を簡潔させる場合Cubeなどを使うと思いますが、エッジが効きすぎていて個人的にはあまり好きではありませんでした。そこで今回の配布に至りました。\n\n面取りキューブとQuadなどを組み合わせることで簡易な花壇が作れます。他にも本棚とかも作れると思います。\n\nテクスチャは同梱しておりません。\n\nご自由にお使いください。\n","url":"https://booth.pm/ja/items/1127716","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1127716/69028a66-1ce1-45b5-9ad0-02a9a37f6e02_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oH/+1zg5ijo2SbnyLGdDu2xcIp2CLxLZV2zGvKnLxoY="></script>
+    nonce="7U5G9qof1/Sf8ddZCIjGeWFHerqW+KQvqoMh6R8znf8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -359,9 +359,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
