--- a/VRChat/42/1127542.html
+++ b/VRChat/42/1127542.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pmLWY45t/Q9QAS9flf0cpYP9E7DmUPZkdftrIhsQDes="></script>
+    "A1oC4U1CRoKZIxCQQpdIh5Yc8ltxmIcZ32bFK8XI7p0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　M9腕輪型電子デバイス","description":"□SF・サイバーパンク風腕輪型電子デバイスの3Dモデルです。\n手鏡機能付き。\n600△ポリゴン。\n→手鏡機能の大雑把なサンプル\nhttps://twitter.com/mabo_to_fu/status/1069674004636622848\n\n□内容\n・M9Device.fbx　本体\n\n・M9Device.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weapon/M9Deviceフォルダに作成されます。\n\nunitypackage版にはVRChatなどで使える手鏡機能が予めセットアップ済みです。\n\n\n□手鏡機能について\n\nunitypackage版をインポート・prefabをHierarchy上に配置後、「Monitor1」というオブジェクトのブレンドシェイプを100にする事で画面部分が展開されます。\nデフォルトで鏡機能が実装済みです。\n\njoint1を回転させる事で画面を腕輪のレールに沿って回転させることが出来ます。\n\n\n□利用規約\n\n原則として再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/12/06：販売開始","url":"https://booth.pm/ja/items/1127542","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1127542/41a3b26a-df12-4efa-bbc8-cc8bce7bed85_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pmLWY45t/Q9QAS9flf0cpYP9E7DmUPZkdftrIhsQDes="></script>
+    nonce="A1oC4U1CRoKZIxCQQpdIh5Yc8ltxmIcZ32bFK8XI7p0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
