--- a/VRChat/46/1127146.html
+++ b/VRChat/46/1127146.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7I7r+dQr/HZHnyVTz6U1Sjv4thQ07tL4vAnkUvK18SA="></script>
+    "5ZwtZOTccRIG2P8Ezk/RKRgixVn2oQm1Q+nkP+AY08U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サンタ帽(520ポリゴン)","description":"サンタ帽です。VRChat用で考えています。\nunitypackage内のprefabをシーン上に載せるだけでご使用いただけます。\n\n帽子はDynamic Boneに対応しています。\nDynamic Boneを入れると帽子が揺れます。\n\nVRChat用で考えていますが他の用途にもご使用いただけます。\n\n・商用・非商用 利用可\n・改変可\n・再配布可\n\nライセンスはCC0です。\nご自由にお使いください。","url":"https://booth.pm/ja/items/1127146","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f9645990-9f02-4323-a296-fb5f41046b0b/i/1127146/aa630ff5-64d5-402f-bddc-1553a37e42ae_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7I7r+dQr/HZHnyVTz6U1Sjv4thQ07tL4vAnkUvK18SA="></script>
+    nonce="5ZwtZOTccRIG2P8Ezk/RKRgixVn2oQm1Q+nkP+AY08U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -359,9 +359,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
